--- a/style.css
+++ b/style.css
@@ -3,29 +3,35 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
+}
+
+:root{
+    font-size: 62.5%;
 }
 body{
     background-color: #ece9fd;
     font-family: 'Epilogue', sans-serif;
     font-weight: 400;
-    padding: 60px 23px 66px;
+    padding: 6rem 2.3rem 6.6rem;
+    font-size: 1.6rem;
 }
 
 h2{
     font-weight: 400;
-    font-size: 16px;
+    font-size: 1.6rem;
     text-transform: uppercase;
     color: #7158EF;
-    line-height: 32px;
-    letter-spacing: 3px;
+    line-height: 3.2rem;
+    letter-spacing: 0.188rem;
 }
 
 h1{
     font-family: 'Epilogue', sans-serif;
     font-weight: 800;
     color: #090039;
-    font-size: 40px;
-    line-height: 48px;
+    font-size: 4.0rem;
+    line-height: 4.8rem;
 }
 
 ul{
