--- a/style.css
+++ b/style.css
@@ -20,6 +20,11 @@ body{
     font-size: 1.6rem;
 }
 
+main{
+    max-width: 33rem;
+    margin: 0 auto;
+}
+
 main h2:first-child {
     font-weight: 400;
     font-size: 1.6rem;
@@ -58,6 +63,17 @@ ul{
     margin-top: 7.2rem;
     list-style: none;
     
+}
+
+ul li{
+    font-weight: 700;
+    font-size: 2.4rem;
+    line-height: 3.2rem;
+    color: #090039;
+
+    max-width: ;width: 25.7rem;
+    display: flex;
+    gap: 3.8rem;
 }
 
 ul li span {
