--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ ul li{
     line-height: 3.2rem;
     color: #090039;
 
-    max-width: ;width: 25.7rem;
+    max-width: 25.7rem;
     display: flex;
     gap: 3.8rem;
 }
