--- a/style.css
+++ b/style.css
@@ -65,6 +65,10 @@ ul{
     
 }
 
+ul li + li {
+    margin-top: 3.2rem;
+}
+
 ul li{
     font-weight: 700;
     font-size: 2.4rem;
@@ -82,4 +86,35 @@ ul li span {
     line-height: 8rem;
     letter-spacing: -0.2rem;
     color: #090039;
+}
+
+
+
+/* Media Queries */
+
+@media (min-width: 700px) {
+    
+    body{
+        padding: 8rem;
+    }
+    
+    main{
+       display: flex;
+       gap: 10rem;
+       max-width: 1020px;
+       
+    }
+
+    main > div {
+        max-width: 484px;
+    }
+
+    main ul li{
+        gap: 5.3rem;
+        max-width: 450px;
+        align-items: center;
+        
+    }
+
+   
 }
